--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,3 @@
 <div>
-  <div class="bike-search">
-    <label>
-      Biker's Search:
-      <input type="number" autofocus #idNumber />
-    </label>
-    <br />
-    <button (click)="checkForIdInList(idNumber.value)">
-      Check for player at id
-    </button>
-    <app-content-card [BikesName]="individualBiker" class="no-type">
-    </app-content-card>
-  </div>
-  <app-content-list></app-content-list>
+  <router-outlet> </router-outlet>
 </div>
