--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     </label>
     <br />
     <button (click)="checkForIdInList(idNumber.value)">
-      Check for player at id
+      Check for Bike at id
     </button>
     <app-content-card [BikesName]="individualBiker" class="no-type">
     </app-content-card>
